--- a/dashboard/templates/admin/submit_line.html
+++ b/dashboard/templates/admin/submit_line.html
@@ -2,7 +2,7 @@
 <div class="submit-row">
 {% if show_save %}
     <input type="submit" value="{% trans 'Save' %}" class="default" name="_save" />
-    <a href="javascript:history.back()"><input type="button" name="Cancel" value="Cancel"></a>
+    <a href="javascript:history.back()"><input type="button" name="Cancel" value="Cancel, take me back"></a>
 {% endif %}
 {% if show_delete_link %}
     {% url opts|admin_urlname:'delete' original.pk|admin_urlquote as delete_url %}
