--- a/dashboard/templates/settings/packages.html
+++ b/dashboard/templates/settings/packages.html
@@ -39,10 +39,9 @@
                 <th>Upstream</th>
                 <th>Translation Platform</th>
                 <th>Release Streams</th>
-                <th>Branch Mapping</th>
+                <th>Mapping</th>
                 <th>Last Sync</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
+                <th><a href="#" data-toggle="tooltip" title="Sync and rebuild mapping">Refresh</a></th>
             </tr>
         </thead>
         <tfoot>
@@ -51,10 +50,9 @@
                 <th>Upstream</th>
                 <th>Translation Platform</th>
                 <th>Release Streams</th>
-                <th>Branch Mapping</th>
+                <th>Mapping</th>
                 <th>Last Sync</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
+                <th><a href="#" data-toggle="tooltip" title="Sync and rebuild mapping">Refresh</a></th>
             </tr>
         </tfoot>
         <tbody>
@@ -70,19 +68,20 @@
                     <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 </td>
                 <td>{{ package.release_streams|join:", " }}</td>
-                <td><a class="btn" href="#">Show Mapping</a></td>
+                <td align="center">
+                    <a class="btn btn-default btn-small" href="{% url 'settings-package-mapping' package.package_name %}">
+                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                    </a>
+                </td>
                 <td>
                     {% if package.transtats_lastupdated %}
                         {{ package.transtats_lastupdated|timesince }} <span style="color:grey">ago</span>.
                     {% else %}
-                        <a class="btn" href="{% url 'settings-jobs' %}">Update Now</a>
+                        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                     {% endif %}
                 </td>
                 <td align="center">
-                  <a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                </td>
-                <td align="center">
-                  <a class="btn btn-danger btn-small disabled"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                  <a class="btn btn-default btn-small"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></a>
                 </td>
             </tr>
             {% endfor %}
