--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -112,7 +112,7 @@
                     <a href="http://transtats.org/terms.html" target="_blank">Terms of Use</a> |
                     <a href="https://github.com/transtats/transtats/issues/new" target="_blank">Report Issue</a>
                   </span>
-                  <span class="pull-right">{{ app_name }} {{ app_version }} | &copy; {% now 'Y' %}
+                  <span class="pull-right">{{ app_name }} {{ app_version }} | Copyright &copy; {% now 'Y' %}
                     <a href="https://www.redhat.com/" target="_blank">Red Hat, Inc</a>
                   </span>
                 </p>
