--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -14,7 +14,7 @@
       <li id="tab-translation-coverage" role="presentation">
           <a href="{% url 'custom-graph' %}">Translation Coverage</a>
       </li>
-      <li id="tab-compare-downstream" role="presentation">
+      <li id="tab-compare-downstream" role="presentation" style="pointer-events:none;opacity:0.6;">
           <a href="{% url 'downstream' %}">Compare with Downstream</a>
       </li>
     </ul>
