--- a/dashboard/templates/settings/graphrule_new.html
+++ b/dashboard/templates/settings/graphrule_new.html
@@ -37,7 +37,7 @@
     <div class="col-xs-12">
         <span>
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            &nbsp;&nbsp;<span class="text-muted"><b>Create a new graph rule</b></span>
+            &nbsp;&nbsp;<span class="text-muted" style="font-size:large">Create a new graph rule</span>
         </span>
         <div class="pull-right">
             <a type="button" class="btn btn-default" href="{% url 'settings-graph-rules' %}">Back to List Graph Rules</a>
