--- a/dashboard/templates/settings/relbranch_new.html
+++ b/dashboard/templates/settings/relbranch_new.html
@@ -36,7 +36,7 @@
     <span class="col-xs-12">
         <span>
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            &nbsp;&nbsp;<span class="text-muted"><b>Register a new {{ relstream.relstream_name|capfirst }} branch/version</b></span>
+            &nbsp;&nbsp;<span class="text-muted" style="font-size:large">Register a new {{ relstream.relstream_name|capfirst }} branch/version</span>
         </span>
         <span class="pull-right">
             <a href="{% url 'settings-stream-branches' relstream.relstream_slug %}" class="btn btn-default">Back to {{ relstream.relstream_name|capfirst }} Branches</a>
