--- a/dashboard/templates/settings/package_new.html
+++ b/dashboard/templates/settings/package_new.html
@@ -20,7 +20,7 @@
     <div class="col-xs-12">
         <span>
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            &nbsp;&nbsp;<span class="text-muted"><b>Register a new package</b></span>
+            &nbsp;&nbsp;<span class="text-muted" style="font-size:large">Register a new package</span>
         </span>
         <div class="pull-right">
             <a type="button" class="btn btn-default" href="{% url 'settings-packages' %}">Back to List Packages</a>
