--- a/dashboard/templates/settings/packages.html
+++ b/dashboard/templates/settings/packages.html
@@ -83,7 +83,7 @@
                     {% endif %}
                 </td>
                 <td align="center">
-                    <a class="btn btn-default btn-small" href="{% url 'settings-package-mapping' package.package_name %}">
+                    <a class="btn btn-default btn-small" href="{% url 'settings-package-config' package.package_name %}">
                         <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                     </a>
                 </td>
