--- a/dashboard/templates/settings/package_mapping.html
+++ b/dashboard/templates/settings/package_mapping.html
@@ -12,8 +12,8 @@
 {% block navigation %}
     <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
     <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
-    <a href="{% url 'settings-packages' %}" class="btn btn-default">Packages</a>
-    <a href="{% url 'settings-package-mapping' package_name %}" class="btn btn-default">Mapping</a>
+    <a href="{% url 'settings-packages' %}" class="btn btn-default">Package</a>
+    <a href="{% url 'settings-package-config' package_name %}" class="btn btn-default">Config</a>
 {% endblock %}
 
 {% block tabcontent %}
@@ -21,7 +21,7 @@
         <div class="col-xs-12">
             <span>
                 <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
-                &nbsp;&nbsp;<span class="text-muted" style="font-size:large"><b>{{ package_name }}</b> | Branch Mapping</span>
+                &nbsp;&nbsp;<span class="text-muted" style="font-size:large"><b>{{ package_name }}</b> | Configuration</span>
             </span>
             <span class="pull-right">
                 <a id="refreshPackageLink" type="button" class="btn btn-default btn-small">
@@ -36,8 +36,15 @@
         <span class="text-info"><b>Description:</b> {{ package_details }}</span><hr/>
     {% endif %}
     {% if branch_mapping %}
-    <div style="padding-left:100px;padding-right:100px">
-        <table class="table table-hover table-bordered" cellspacing="0">
+    <div class="panel panel-default">
+      <div class="panel-heading" style="padding-bottom:20px">
+        <span style="font-size:large">Branch Mapping</span>
+        <span class="pull-right"><a class="btn btn-default btn-small disabled">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        </span>
+      </div>
+      <div class="panel-body">
+          <table class="table table-hover table-bordered" cellspacing="0">
             <thead>
                 <tr>
                     <th>Release Stream Branch</th>
@@ -53,6 +60,7 @@
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
     {% else %}
         No mapping found. <span class="text-muted">Please check release branch(es) and refresh the package.</span>
