--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -2,7 +2,7 @@
 
 {% block pagebanner %}
     <div class="page-header">
-      <h1>How To <small>working with {{ app_name }}...</small></h1>
+      <h1>How To <small>work with {{ app_name }}...</small></h1>
     </div>
 {% endblock %}
 
