--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -9,7 +9,7 @@
 {% block pagecontent %}
     <ul class="nav nav-tabs nav-justified">
       <li id="tab-translation-position" role="presentation">
-          <a href="{% url 'home' %}">Translation Position</a>
+          <a href="{% url 'home' %}">Translation Status</a>
       </li>
       <li id="tab-translation-coverage" role="presentation">
           <a href="{% url 'custom-graph' %}">Translation Coverage</a>
