--- a/dashboard/templates/stats/index.html
+++ b/dashboard/templates/stats/index.html
@@ -15,7 +15,7 @@
 function csrfSafeMethod(method){return(/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));}
 $(document).ready(function(){$('#tab-translation-position').addClass('active');$("#packageName").change(function(event){var packageName=$(this).val();$.ajax({beforeSend:function(xhr,settings){if(!csrfSafeMethod(settings.type)&&!this.crossDomain){if(csrftoken){xhr.setRequestHeader("X-CSRFToken",csrftoken);}else{xhr.setRequestHeader("X-CSRFToken","{{ csrf_token }}");}}},type:"POST",url:"/ajax/graph-data",data:{'package':packageName},dataType:"json",success:function(json_response){var pkg_desc=json_response['pkg_desc'];var graph_data=json_response['graph_data'];var ticks=json_response['ticks'];var dataset=[]
 for(version in graph_data){if(graph_data.hasOwnProperty(version)){dataset.push({label:version,data:graph_data[version]});}}
-var options={series:{lines:{show:true},points:{radius:3,fill:true,show:true},},xaxis:{axisLabel:"Languages",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:10,ticks:ticks},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:3,tickFormatter:function(v,axis){return v+"%";},tickDecimals:2,},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:true,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:true,content:"%s | %y translated",},};$.plot($("#grapharea"),dataset,options);var disclaimer="<span class='pull-right text-muted'>Graph is based on sync\'d data. And %age is calculated on messages.</span>";$("#graphinfo").html("Translation position of "+packageName+" for "+dataset.length+" branch(es) in "+ticks.length+" language(s).");$("#packagedesc").html(pkg_desc);$("#graphdisclaimer").html(disclaimer);},});return false;});});
+var options={series:{lines:{show:true},points:{radius:3,fill:true,show:true},},xaxis:{axisLabel:"Languages",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:10,ticks:ticks},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:3,tickFormatter:function(v,axis){return v+"%";},tickDecimals:2,},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:true,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:true,content:"%s | %y translated",},};$.plot($("#grapharea"),dataset,options);var disclaimer="<span class='pull-right text-muted'>Graph is based on sync\'d data. And %age is calculated on messages.</span>";$("#graphinfo").html("Translation status of "+packageName+" for "+dataset.length+" branch(es) in "+ticks.length+" language(s).");$("#packagedesc").html(pkg_desc);$("#graphdisclaimer").html(disclaimer);},});return false;});});
 </script>
 {% endblock %}
 
@@ -24,7 +24,7 @@ var options={series:{lines:{show:true},points:{radius:3,fill:true,show:true},},x
     <nav class="navbar navbar-default bg-faded">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" id="graphinfo">Translation position of a package for most of the branches in all enabled languages.</a>
+                <a class="navbar-brand" id="graphinfo">Translation status of a package for most of the branches in all enabled languages.</a>
             </div>
         </div>
     </nav>
