--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block pagebanner %}
-    <div class="page-header">
+    <div style="padding-left:20px">
       <h1>About <small>{{ description }}</small></h1>
     </div>
 {% endblock %}
 
 {% block pagecontent %}
     <ul class="nav nav-tabs nav-justified">
-      <li id="tab-translation-position" role="presentation">
+      <li id="tab-translation-status" role="presentation">
           <a href="{% url 'home' %}">Translation Status</a>
       </li>
       <li id="tab-translation-coverage" role="presentation">
