--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagebanner %}
-    <div class="page-header">
+    <div style="padding-left:20px">
       <h1>How To <small>work with {{ app_name }}...</small></h1>
     </div>
 {% endblock %}
