--- a/dashboard/templates/settings/settings_base.html
+++ b/dashboard/templates/settings/settings_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagebanner %}
-    <div class="page-header">
+    <div style="padding-left:20px">
       <h1>App Settings <small>inventory and configuration</small></h1>
     </div>
 {% endblock %}
