--- a/dashboard/templates/stats/custom_graph.html
+++ b/dashboard/templates/stats/custom_graph.html
@@ -19,14 +19,10 @@ $(document).ready(function(){$('#tab-translation-coverage').addClass('active');$
 {% endblock %}
 
 {% block tabcontent %}
-    <br/><br/>
-    <nav class="navbar navbar-default bg-faded">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" id="coverageinfo">Translation coverage of a package list for a specific release in selected languages.</a>
-            </div>
-        </div>
-    </nav>
+    <br/><hr/><span style="padding-left:20px;padding-right:10px;"
+                    class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+        <span id="coverageinfo" class="text-info">
+            Translation coverage of a package list for a specific release in selected languages.</span><hr/>
     <div style="padding:20px">
         <div class="row" style="padding-bottom:20px">
             <div class="col-xs-12">
