--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -79,6 +79,8 @@
                 <li><a href="{% url 'home' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
                 {% if user.is_authenticated and user.is_superuser %}
                   <li><a href="{% url 'admin:index' %}">Admin Console</a></li>
+                {% else %}
+                  <li><a href="{% url 'admin:index' %}">Admin Login</a></li>
                 {% endif %}
                 <li><a href="{% url 'settings' %}">Inventory and Configuration</a></li>
                 <li><a href="{% url 'howto' %}">How to use {{ app_name }}</a></li>
